<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_stat_history"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_stat_notifi"
                app:actionLayout="@layout/background_15"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_stat_help"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_sos"
                android:icon="@drawable/ic_stat_sos"
                android:title="@string/menu_tools"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_stat_about"
                android:title="@string/menu_about"/>
    </group>



</menu>
