<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:background="@color/background_bookingaccept_or_bookingcacel"
                                                   android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="200dp" android:layout_height="200dp"
                                                  android:src="@drawable/bookingaccept"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  android:layout_marginTop="70dp"
                                                  app:layout_constraintStart_toStartOf="parent"
                                                  app:layout_constraintHorizontal_bias="0.497"
                                                  app:civ_border_color="@color/background_navgationView_buttonaccept_civ_buttoncalcel"
                                                  app:civ_border_width="15dp"
                                                  app:layout_constraintEnd_toEndOf="parent"
                                                  android:layout_marginBottom="40dp"
                                                  app:layout_constraintBottom_toTopOf="@+id/textView3"
                                                  app:layout_constraintVertical_bias="0.658"
                                                  android:id="@+id/circleImageView2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="30sp" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/textView4"
            android:gravity="center" android:textAllCaps="true" android:textColor="@color/white100"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView2"
            app:layout_constraintBottom_toTopOf="@+id/textView4" android:text="@string/text_bbookingaccept"/>
    <TextView
            android:text="@string/sdt_bookingaccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="20sp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center" android:textColor="@color/white100"
            android:textAllCaps="false"/>
    <TextView
            android:text="@string/accept_bookingaccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textSize="24sp" app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/textView7"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:gravity="center" android:textColor="@color/white100" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7" app:layout_constraintVertical_bias="1.0"
    />
    <TextView
            android:text="@string/vnd_bookingaccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:textSize="30sp"
            android:textColor="@color/background_textAccept" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="28dp" app:layout_constraintBottom_toTopOf="@+id/ratingBar"/>
    <Button
            android:text="@string/agree_bookingaccept"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp" android:textAllCaps="false" android:fontFamily="sans-serif"
            android:textColor="@color/white100" android:background="@color/background_navgationView_buttonaccept_civ_buttoncalcel"
            android:layout_marginBottom="16dp" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="@+id/button"
            android:layout_marginBottom="60dp" app:layout_constraintBottom_toTopOf="@+id/button"
            android:progressTint="@android:color/holo_orange_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>