<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="340dp"
                                                   android:id="@+id/constraintLayout"
                                                   android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp">
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView22"
                app:layout_constraintBottom_toTopOf="@+id/textView20" app:layout_constraintVertical_bias="0.261"
                android:layout_marginEnd="3dp" android:background="@color/common_google_signin_btn_text_dark_disabled"/>
        <TextView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:id="@+id/textView21"
                android:background="@drawable/background_tick"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="18dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/textView23" android:layout_marginEnd="12dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp" app:srcCompat="@mipmap/ic_location"
                android:id="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="14dp" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView21"
                app:layout_constraintEnd_toStartOf="@+id/textView15" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/sua"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView22" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="295dp" android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15"/>
        <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp" app:srcCompat="@mipmap/ic_person"
                android:id="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/textView20"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/imageView6"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="1.0"/>
        <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp" app:srcCompat="@mipmap/ic_phone"
                android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="@+id/imageView5"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="73dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/ma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView23" android:textSize="18sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView21" android:layout_marginStart="12dp"
                android:layout_marginBottom="17dp" app:layout_constraintBottom_toTopOf="@+id/textView15"/>
        <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" android:textSize="24sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="9dp" android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:id="@+id/textView20" android:textSize="18sp"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/textView22" android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toTopOf="@+id/textView24"
                app:layout_constraintStart_toEndOf="@+id/imageView5" app:layout_constraintVertical_bias="1.0"
                android:text="@string/name_name" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView24" android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginBottom="76dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_promo"
                android:textAllCaps="true"
                android:id="@+id/textView25" android:text="@string/promo"
                android:textSize="18sp"
                android:gravity="right"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="59dp"
                app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
                android:text="@string/VND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView26" android:textSize="18sp"
                android:textColor="@color/background_VND"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginTop="120dp"
                app:layout_constraintTop_toBottomOf="@+id/textView25" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/ratingBar2" app:layout_constraintVertical_bias="1.0"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <RatingBar
                android:theme="@style/Theme.Rating"
                android:rating="2.5"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar2"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:isIndicator="false"
                android:clickable="true"
                android:duplicateParentState="true"
                android:fadeScrollbars="true"
                android:filterTouchesWhenObscured="true"
                android:fitsSystemWindows="true"
                android:focusableInTouchMode="true"
                android:hapticFeedbackEnabled="true"
                android:indeterminateOnly="false"
                android:isScrollContainer="true" android:keepScreenOn="true"
                android:nestedScrollingEnabled="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:soundEffectsEnabled="true"
                android:indeterminate="false"
                style="@style/Widget.AppCompat.RatingBar.Indicator"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>